2010-01-05  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Kick/Kick.cpp:
	  whitespace.

	* Geonik/BuzzMachines/Makefile.am:
	* Geonik/BuzzMachines/Mandpluk.h:
	* Geonik/BuzzMachines/Mandpluk.sw:
	* Geonik/BuzzMachines/Omega1.cpp:
	* Geonik/BuzzMachines/PrimiFun.cpp:
	* Geonik/DspClasses/Adsr.h:
	* Geonik/DspClasses/Buffer.h:
	* Geonik/DspClasses/BuzzOsc.h:
	* Geonik/DspClasses/ColorMaps.h:
	* Geonik/DspClasses/DcOffset.cpp:
	* Geonik/DspClasses/DcOffset.h:
	* Geonik/DspClasses/Delay.h:
	* Geonik/DspClasses/DspAdd.h:
	* Geonik/DspClasses/DspClasses.cpp:
	* Geonik/DspClasses/DspClasses.h:
	* Geonik/DspClasses/Fft.h:
	* Geonik/DspClasses/Filter.h:
	* Geonik/DspClasses/Generators.h:
	* Geonik/DspClasses/InvSqrt.cpp:
	* Geonik/DspClasses/LookUp.h:
	* Geonik/DspClasses/Noise.h:
	* Geonik/DspClasses/Saturator.h:
	* Geonik/DspClasses/Sqrt.cpp:
	* Geonik/DspClasses/Volume.h:
	* Geonik/DspClasses/Wave.h:
	* Geonik/DspClasses/WinBase.cpp:
	* Geonik/Makefile.am:
	* Geonik/readme.txt:
	* Makefile.am:
	* Matilde/Tracker/Track.cpp:
	* Matilde/Tracker/Tracker.cpp:
	* configure.ac:
	  Added & ported first two Geonik machines.
	
	* Matilde/Tracker (svn:ignore):
	* Geonik/BuzzMachines/Omega1.cpp (svn:keywords, svn:eol-style):
	* FSM/PanzerDelay (svn:ignore):
	* FSM/Chorus2 (svn:ignore):
	* Jeskola/Trilok (svn:ignore):
	* FSM/dspchips (svn:ignore):
	* Geonik/BuzzMachines (svn:ignore):
	* Elak (svn:ignore):
	* CyanPhase (svn:ignore):
	* Geonik/DspClasses/DcOffset.h (svn:keywords, svn:eol-style):
	* common (svn:ignore):
	* Geonik/DspClasses/DspClasses.h (svn:keywords, svn:eol-style):
	* FSM/ScrapMan (svn:ignore):
	* FSM (svn:ignore):
	* Geonik/DspClasses/Filter.h (svn:keywords, svn:eol-style):
	* Geonik/DspClasses/Wave.h (svn:keywords, svn:eol-style):
	* Jeskola/Freeverb (svn:ignore):
	* FSM/TunaMan (svn:ignore):
	* Makk/M4 (svn:ignore):
	* Makk/M3 (svn:ignore):
	* FSM/Philta (svn:ignore):
	* Geonik/DspClasses/Sqrt.cpp (svn:keywords, svn:eol-style):
	* Ensonic (svn:ignore):