@@ -8,6 +8,11 @@ AC_CONFIG_SRCDIR([ChangeLog])
 AC_CONFIG_HEADER([config.h])
 AC_CONFIG_MACRO_DIR(m4)
 
+# Support silent build rules, requires at least automake-1.11. Disable
+# by either passing --disable-silent-rules to configure or passing V=1
+# to make
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
+
 # Checks for programs.
 AC_PROG_CXX
 AC_PROG_CC
@@ -67,8 +72,7 @@ BM_LIBS="-module -avoid-version"
 AC_SUBST(BM_CXXFLAGS)
 AC_SUBST(BM_LIBS)
 
-SHAVE_INIT([.])
-AC_CONFIG_FILES(Makefile shave shave-libtool \
+AC_CONFIG_FILES(Makefile \
   common/Makefile \
     common/dsplib/Makefile \
     common/mdk/Makefile \
